fixed gap in the right and responsive

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,6 +6,15 @@
   font-family: "Montserrat", sans-serif;
 }
 
+html,
+body {
+  width: 100%;
+  height: 100%;
+  margin: 0px;
+  padding: 0px;
+  overflow-x: hidden;
+}
+
 .width-animation {
   -webkit-animation: width-animation 0.3s cubic-bezier(0.25, 0.46, 0.45, 0.94)
     both;
